--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "framer-motion": "^11.3.8",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
